# Drift-Detector

./: .gitignore  Readme.MD  pyproject.toml
drift_detect/: cli.py
drift_detect.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
drift_detect/phase1/: detector.py  renderer.py  resolver.py
drift_detect/phase2/: fetcher.py  normalizer.py
drift_detect/phase3/: classifier.py  differ.py  driftignore.py
drift_detect/phase4/: printer.py  scanner.py
drift_detect/phase6/: snapshot.py
tests/: test_classifier.py  test_cli.py  test_detector.py  test_differ.py  test_driftignore.py  test_fetcher.py  test_normalizer.py  test_printer.py  test_renderer.py  test_resolver.py  test_scanner.py
tests/fixtures/helm/basic/: prod.yaml  values.yaml
tests/fixtures/helm/basic/templates/: deployment.yaml
tests/fixtures/kustomize/base-only/: deployment.yaml
tests/fixtures/kustomize/overlay/prod/: kustomization.yaml
tests/fixtures/raw/multi-deploy/: test-runner.yaml  web.yaml
tests/fixtures/raw/simple/: deployment.yaml
tests/scripts/: helpers.sh
